hphp/test/quick/unreachable-fpi-1.hhas.expectf

Fatal error: Uncaught exception 'Exception' with message 'foo' in %s/unreachable-fpi-1.hhas:2
Stack trace:
%A
